# codetracer

./: .editorconfig  .envrc  .gitignore  .gitmodules  AGENTS.md  build_for_extension.sh  env.ps1  flake.nix  install-on-distributions.sh  justfile
.agents/: codebase-insights.txt
.github/: sibling-pins
.github/workflows/: codetracer.yml  cross-repo-tests.yml
browser-replay/: .gitignore  WASM_BUILD_STATUS.md  build-dist.sh  deploy-wasm.sh  nginx.conf.template  setup-certs.sh  start-server.sh  stop-server.sh  test-server.sh
browser-replay/app/: index.html  transport-test.html  worker.js
browser-replay/tests/: import-fixture-trace.sh  run_all.sh  test_cross_platform_replay.sh  test_dist.sh  test_emulator_api_native.sh  test_transport.sh  test_wasm_e2e.sh
ci/: setup-rr-backend.sh
ci/lint/: nix.sh  rust.sh
ci/test/: cli-record-smoke.sh
docs/: tab-vs-window-policy.md
docs/book/: book.toml
node-packages/: .yarnrc.yml  package.json
non-nix-build/: install_ct_remote.sh
scripts/: build-once.sh  detect-siblings.sh  developer-setup.sh  post-build-setcap.sh  run-cross-repo-tests.sh
src/: Tuprules.tup
src/ct/: Tupfile  (+2 more)
src/db-backend/: Cargo.toml  Tupfile
src/db-backend/.cargo/: config.toml
src/db-backend/src/: calltrace.rs  dap.rs  dap_handler.rs  dap_server.rs  db.rs  diff.rs  expr_loader.rs  flow_preloader.rs  handler.rs  in_memory_trace_reader.rs  lang.rs  lib.rs  macro_sourcemap.rs  main.rs  paths.rs  program_search_tool.rs  query.rs  recreator_session.rs  replay.rs  rr_dispatcher.rs  step_lines_loader.rs  task.rs  trace_processor.rs  trace_reader.rs  vfs.rs
src/db-backend/src/ctfs_trace_reader/: ctfs_container.rs  mod.rs
src/db-backend/src/tracepoint_interpreter/: executor.rs  interpreter.rs  mod.rs  tests.rs
src/db-backend/test-programs/aiken/: flow_test.ak
src/db-backend/test-programs/cadence/: flow_test.cdc
src/db-backend/test-programs/cairo/: flow_test.cairo
src/db-backend/test-programs/circom/: flow_test.circom
src/db-backend/test-programs/javascript/javascript_hcr_flow_test/: index.js  mymodule.js  mymodule_v2.js
src/db-backend/test-programs/leo/: flow_test.leo
src/db-backend/test-programs/masm/: masm_flow_test.masm
src/db-backend/test-programs/move/flow_test/sources/: flow_test.move
src/db-backend/test-programs/noir/src/: main.nr
src/db-backend/test-programs/polkavm/: flow_test.rs
src/db-backend/test-programs/python/python_hcr_flow_test/: main.py  mymodule.py  mymodule_v2.py
src/db-backend/test-programs/ruby/ruby_hcr_flow_test/: main.rb  mymodule.rb  mymodule_v2.rb
src/db-backend/test-programs/solana/: solana_flow_test.rs
src/db-backend/test-programs/solidity/: solidity_flow_test.sol
src/db-backend/test-programs/sway/flow_test/: Forc.toml
src/db-backend/test-programs/sway/flow_test/src/: main.sw
src/db-backend/test-programs/tolk/: flow_test.tolk
src/db-backend/tests/: aiken_flow_dap_test.rs  bash_flow_integration.rs  c_mcr_streaming_flow_test.rs  cadence_flow_dap_test.rs  cairo_flow_dap_test.rs  circom_flow_dap_test.rs  dap_backend_server.rs  dap_backend_stdio.rs  dap_ttd_windows_smoke.rs  go_flow_integration.rs  javascript_flow_dap_test.rs  javascript_flow_integration.rs  javascript_hcr_ctfs_integration.rs  lean_flow_integration.rs  leo_flow_dap_test.rs  masm_flow_dap_test.rs  move_flow_dap_test.rs  nim_flow_integration.rs  nim_mcr_streaming_flow_test.rs  noir_flow_dap_test.rs  noir_flow_integration.rs  polkavm_flow_dap_test.rs  python_flow_ctfs_integration.rs  python_flow_dap_test.rs  python_flow_integration.rs  python_hcr_ctfs_integration.rs  rr_test.rs  ruby_flow_ctfs_integration.rs  ruby_flow_dap_test.rs  ruby_flow_integration.rs  ruby_hcr_ctfs_integration.rs  rust_flow_integration.rs  rust_mcr_streaming_flow_test.rs  solana_flow_dap_test.rs  solidity_flow_dap_test.rs  solidity_flow_integration.rs  stylus_flow_dap_test.rs  sway_flow_dap_test.rs  tolk_flow_dap_test.rs  wasm_flow_dap_test.rs  (+2 more)
src/db-backend/tests/test_harness/: mod.rs
src/db-backend/wasm-sysroot/include/: ctype.h  stdint.h  string.h  wctype.h
src/db-backend/wasm-testing/: index.html  index.js  replay-test.html  replay-test.js  worker.js
tests/: test_ct_print.sh
tools/: deepreview-visual-brief.md  screen-briefs.md
tsc-ui-tests/: playwright.config.ts
ui-tests/: appsettings.json
views/: server_index.ejs
(+260 files in other folders)
