[package]
name = "db-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
log = "0.4.21"
env_logger = "0.11.3"
# log2 = "0.1.11"
regex = "1"
indexmap = "1.9.3"
once_cell = "1.10.0"

console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }

schemars = "0.8.2"
schemars-zod = "0.1.5"

futures = "0.3.30"
futures-timer = "3.0.3"
clap = { version = "4.5.4", features = ["derive"] }
codetracer_trace_types = { path = "../../libs/codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_reader = { path = "../../libs/codetracer-trace-format/codetracer_trace_reader" }
codetracer_trace_writer = { path = "../../libs/codetracer-trace-format/codetracer_trace_writer" }
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"] }
num-bigint = "0.4.6"
chrono = "0.4.41"

serde-wasm-bindgen = { version = "0.6.5", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "DedicatedWorkerGlobalScope",
  "WorkerGlobalScope",
  "console",
  "MessageEvent",
  "Worker",
  "Window",
] }

vfs = "0.12"

shellexpand = { version = "3.1.1", optional = true }

ntest = "0.9.3"

tree-sitter = "*"
# helper lib:
tree-sitter-traversal2 = "0.2.0"
# language-specific grammar bindings:
tree-sitter-rust = "0.24"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-pascal = "0.10.0"
tree-sitter-d = "0.8.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-python = "0.25.0"
tree-sitter-nim = { git = "https://github.com/metacraft-labs/tree-sitter-nim", branch = "main" }

# the binding for our custom tracepoint tresitter grammar:
tree-sitter-tracepoint = { path = "./tree-sitter-trace/" }
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-bash = "0.23.3"
tree-sitter-solidity = "1.2"
# blockchain-specific grammar bindings:
# Forked to metacraft-labs with tree-sitter-language API migration:
tree-sitter-cairo = { git = "https://github.com/metacraft-labs/tree-sitter-cairo", branch = "tree-sitter-language-api" }
tree-sitter-aiken = { git = "https://github.com/metacraft-labs/tree-sitter-aiken", branch = "tree-sitter-language-api" }
tree-sitter-move-on-aptos = { git = "https://github.com/metacraft-labs/tree-sitter-move-on-aptos", branch = "tree-sitter-language-api" }
tree-sitter-sway = { git = "https://github.com/metacraft-labs/tree-sitter-sway", branch = "tree-sitter-language-api" }
# Upstream repos already use tree-sitter-language API:
tree-sitter-circom = { git = "https://github.com/Decurity/tree-sitter-circom", branch = "main" }
tree-sitter-leo = { git = "https://github.com/r001/tree-sitter-leo", branch = "main" }
tree-sitter-tolk = { git = "https://github.com/ton-blockchain/tree-sitter-tolk", branch = "main" }
# Our own grammar repos:
tree-sitter-masm = { git = "https://github.com/metacraft-labs/tree-sitter-masm", branch = "main" }
tree-sitter-cadence = { git = "https://github.com/metacraft-labs/tree-sitter-cadence", branch = "main" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
] }

[lib]
name = "db_backend"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "db-backend"
path = "src/main.rs"
required-features = ["io-transport"]

[[bin]]
name = "virtualization-layers"
path = "src/bin/virtualization-layers.rs"
required-features = ["io-transport"]

[[bin]]
name = "schema-generator"
path = "src/bin/schema_generator.rs"
required-features = ["io-transport"]

[dev-dependencies]
ct-dap-client = { path = "../../libs/ct-dap-client" }
tempfile = "3"

[features]
debugging = []

default = ["io-transport"]

io-transport = ["dep:shellexpand"]
browser-transport = [
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "dep:console_error_panic_hook",
  "dep:wasm-logger",
]
